--- a/Client/Configuration/Base.xcconfig
+++ b/Client/Configuration/Base.xcconfig
@@ -16,8 +16,8 @@ BASE_BUNDLE_ID = $(FRAMEWORK_BASE_BUNDLE_ID).ios
 
 DEVELOPMENT_TEAM = KL8N8XSYF4
 
-BRAVE_VERSION = 1.9.1
-BRAVE_BUILD_ID=$(GENERATED_BUILD_ID)
+DISSENTER_VERSION = 1.0.0
+DISSENTER_BUILD_ID=$(GENERATED_BUILD_ID)
 
 // Additional Info //
 // Can specify target specific flags via:
