--- a/DissenterShareTo/DissenterShareToInfo.plist
+++ b/DissenterShareTo/DissenterShareToInfo.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>Open in Dissenter</string>
+	<string>Open in Dissenter.com</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
