Updated Client strings Brave > Dissenter

--- a/Client/Info.plist
+++ b/Client/Info.plist
@@ -77,7 +77,7 @@
 	<key>NSCameraUsageDescription</key>
 	<string>This lets you take and upload photos.</string>
 	<key>NSFaceIDUsageDescription</key>
-	<string>Brave requires Face ID to access your saved logins.</string>
+	<string>Dissenter requires Face ID to access your saved logins.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Websites you visit may request your location.</string>
 	<key>NSMicrophoneUsageDescription</key>
