--- a/Client.xcodeproj/xcshareddata/xcschemes/Fennec_Enterprise_XCUITests_iPad.xcscheme
+++ b/Client.xcodeproj/xcshareddata/xcschemes/Fennec_Enterprise_XCUITests_iPad.xcscheme
@@ -264,8 +264,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "5DE7688B20B3456E00FF5533"
-               BuildableName = "BraveSharedTests.xctest"
-               BlueprintName = "BraveSharedTests"
+               BuildableName = "DissenterSharedTests.xctest"
+               BlueprintName = "DissenterSharedTests"
                ReferencedContainer = "container:Client.xcodeproj">
             </BuildableReference>
          </TestableReference>
