--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -64,7 +64,7 @@ excluded: # paths to ignore during linting. Takes precedence over `included`.
   - SyncTests/
   - StorageTests/
   - ClientTests/
-  - BraveSharedTests/
+  - DissenterSharedTests/
   - DataTests/
   - fastlane/
   - SharedTests/
