Updated bundle ids, reverse urls to use dissenter

--- a/Client/Configuration/Base.xcconfig
+++ b/Client/Configuration/Base.xcconfig
@@ -11,7 +11,7 @@
 
 OTHER_SWIFT_FLAGS_BASE=-DMOZ_TARGET_$(TARGET_NAME:upper)
 
-FRAMEWORK_BASE_BUNDLE_ID = com.brave
+FRAMEWORK_BASE_BUNDLE_ID = com.dissenter
 BASE_BUNDLE_ID = $(FRAMEWORK_BASE_BUNDLE_ID).ios
 
 DEVELOPMENT_TEAM = KL8N8XSYF4
