--- a/Client/Configuration/Base.xcconfig
+++ b/Client/Configuration/Base.xcconfig
@@ -14,7 +14,7 @@ OTHER_SWIFT_FLAGS_BASE=-DMOZ_TARGET_$(TARGET_NAME:upper)
 FRAMEWORK_BASE_BUNDLE_ID = com.dissenter
 BASE_BUNDLE_ID = $(FRAMEWORK_BASE_BUNDLE_ID).ios
 
-DEVELOPMENT_TEAM = KL8N8XSYF4
+DEVELOPMENT_TEAM = DK8L429XVH
 
 DISSENTER_VERSION = 1.0.0
 DISSENTER_BUILD_ID=$(GENERATED_BUILD_ID)
