--- a/Client/Configuration/Fennec.xcconfig
+++ b/Client/Configuration/Fennec.xcconfig
@@ -5,7 +5,7 @@
 #include "Base.xcconfig"
 #include "Local.xcconfig"
 
-MOZ_BUNDLE_DISPLAY_NAME = Brave ($(USER))
+MOZ_BUNDLE_DISPLAY_NAME = Dissenter ($(USER))
 
 BRAVE_API_KEY = key
 
