Replaced BRAVE_API_KEY > DISSENTER_API_KEY

--- a/Client/Configuration/Fennec.xcconfig
+++ b/Client/Configuration/Fennec.xcconfig
@@ -7,7 +7,7 @@
 
 MOZ_BUNDLE_DISPLAY_NAME = Dissenter ($(USER))
 
-BRAVE_API_KEY = key
+DISSENTER_API_KEY = key
 
 // Bundle Identifier
 // MOZ_BUNDLE_ID = set in Local.xconfig
