--- a/Client/Configuration/Fennec.enterprise.xcconfig
+++ b/Client/Configuration/Fennec.enterprise.xcconfig
@@ -6,7 +6,7 @@
 
 MOZ_BUNDLE_DISPLAY_NAME = DissenterNight
 
-BRAVE_API_KEY = key
+DISSENTER_API_KEY = key
 
 // Bundle Identifier
 MOZ_BUNDLE_ID = $(BASE_BUNDLE_ID).BrowserEnterprise
