--- a/Client/Configuration/FirefoxBeta.xcconfig
+++ b/Client/Configuration/FirefoxBeta.xcconfig
@@ -6,7 +6,7 @@
 
 MOZ_BUNDLE_DISPLAY_NAME = DissenterBeta
 
-BRAVE_API_KEY = key
+DISSENTER_API_KEY = key
 
 // Bundle Identifier
 MOZ_BUNDLE_ID = $(BASE_BUNDLE_ID).BrowserBeta
