--- a/Client/Info.plist
+++ b/Client/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>$(BRAVE_API_KEY)</string>
+	<string>$(DISSENTER_API_KEY)</string>
 	<key>AdjustAppToken</key>
 	<string>$(ADJUST_APP_TOKEN)</string>
 	<key>AdjustEnvironment</key>
